# panama-copc

./: CHANGELOG.md  README.md  environment.yml  large_copc.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: Dockerfile  build  cibuild  console  lint  stac  test
docs/: example.ipynb
examples/: collection.json
examples/230526_200655/: 230526_200655.json
examples/usa_neonsrer_2019_NEON_D14_SRER_DP1_L090-1_2019091314_unclassified_point_cloud_0000003/: usa_neonsrer_2019_NEON_D14_SRER_DP1_L090-1_2019091314_unclassified_point_cloud_0000003.json
scripts/: test  update-examples
src/stactools/gedi_calval_copc/: __init__.py  commands.py  constants.py  stac.py
src/stactools/panama_copc/: __init__.py  commands.py  constants.py  metadata.py  stac.py
tests/: test_commands.py  test_stac.py
